[package]
name = "assert_eq_ignoring"
description = """
`assert_eq_ignoring` is a macro designed for asserting equality of structs while allowing specified fields to be excluded.
"""
version = "0.1.0"
edition = "2021"
authors = ["Daisuke Ito <daisuke.ito.cs@gmail.com>"]
license = "MIT"
keywords = ["macro", "test", "testing", "assertions", "assert"]
readme = "README.md"
repository = "https://github.com/poi2/assert_eq_ignoring"

[dependencies]
paste = "1.0.15"

[dev-dependencies]
getset = "0.1.2"
